# schnorr_canister

./: Cargo.toml  LICENSE  README.md  canister_ids.json  deploy.sh  dfx.json  schnorr_canister.did
scripts/: test.sh
src/: ed25519.rs  lib.rs  memory.rs
src/schnorr_canister_backend/: Cargo.toml
src/schnorr_canister_backend/src/: lib.rs
tests/: tests.rs
