[package]
name = "schnorr_canister"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bip32 = { "version" = "0.5.1", features = ["k256"] }
bitcoin = { version = "0.31.0", features = ["serde"] }
# candid = "^0.10.3"
# ic-cdk = "^0.10.0"
candid = "0.9.10"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.5.1"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic/", rev = "8b6c8d1b0f75b1c4d41a3e251a715bde59c4d19a" }
ic-stable-structures = "0.6"
getrandom = { version = "0.2.11", features = ["custom"] }
serde = "1"
serde_bytes = "0.11.14"