[package]
name = "schnorr_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bip32 = { "version" = "0.5.1", features = ["k256"] }
candid = "0.10.1"
ic-cdk = "0.12.0"
ic-stable-structures = "0.6"
getrandom = { version = "0.2.11", features = ["custom"] }
k256 = { "version" = "0.13.2", features = ["schnorr"] }
serde = "1"